--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "slim/slim": "^3.8",
         "slim/twig-view": "^2.2",
         "illuminate/database": "^5.4"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^3.3"
     }
 }
