--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "slim/twig-view": "^2.2",
         "illuminate/database": "^5.4",
         "respect/validation": "^1.1",
-        "slim/flash": "^0.2.0"
+        "slim/flash": "^0.2.0",
+        "kanellov/slim-twig-flash": "^0.2.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^3.3"
